--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -1,5 +1,6 @@
 @import url('docs.css');
-@import url('./b-datepicker/b-datepicker.css');
+
+@import url('b-datepicker/b-datepicker.css');
 
 .sidebar-nav {
     top: 70px;
