--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -65,3 +65,12 @@ body .alert .close {
 body .breadcrumb {
     margin: 20px 0 0;
 }
+
+.complaints-list {
+    list-style: none;
+}
+
+.fields {
+    list-style: none;
+    display: none;
+}
